--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+This is a fork of vim-ruby that shows method signatures in omnicomplete for Ruby 1.9+ versions.
+
+Method Sorting:
+  By default, in this fork, method sorting is turned off. If you want to enable it, use:
+  `let g:rubycomplete_sort_completions = 1`
+
+Popup options
+  The default completeopt options are `longest,menuone`. `:help completeopt` for more information.
+
                     +---------------------------------+
                     |  vim-ruby github project README |
                     +---------------------------------+
